# UmeBook

./: .gitignore  LICENSE  README.md
ex2_01/: Project.toml  README.md
ex2_01/src/: ex2_01.jl
ex2_02/: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
ex2_02/clarabel_wrapper/: Cargo.toml
ex2_02/clarabel_wrapper/src/: lib.rs
ex2_02/data/: oils.csv  products.csv  solution.csv
ex2_02/solve/: Cargo.toml
ex2_02/solve/src/: main.rs
ex2_02/src/: main.rs
ex4_01/: README.md  pyproject.toml
ex4_01-03/: README.md  pyproject.toml
ex4_01-03/notebooks/ex4_01/: cbc.ipynb  highs.ipynb  ortools.ipynb
ex4_01-03/notebooks/ex4_01/data/: test.txt
ex4_01-03/notebooks/ex4_02/: ortools_cpsat.ipynb  ortools_routing.ipynb  ortools_routing_example.ipynb
ex4_01-03/notebooks/ex4_03/: ortools.ipynb
ex4_01/notebooks/: cbc.ipynb  highs.ipynb  ortools.ipynb
ex4_01/notebooks/.ipynb_checkpoints/: highs-checkpoint.ipynb
ex4_02/: README.md  pyproject.toml
ex4_02/notebooks/: ortools_cpsat.ipynb
