[project]
name = "ex4-01-03"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "psiana011", email = "psiana011.endo@gmail.com" }
]
dependencies = [
    "ortools>=9.10.4067",
    "networkx>=3.3",
    "matplotlib>=3.9.0",
    "pulp>=2.8.0",
    "highspy>=1.7.1.dev1",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "python-lsp-server>=1.11.0",
    "python-lsp-ruff>=2.2.1",
    "jupyterlab-lsp>=5.1.0",
    "jupyterlab-language-pack-ja-jp>=4.2.post0",
    "jupyterlab-vim>=4.1.3",
    # "jupyterlab-code-formatter>=2.2.1",
]

[tool.ruff]
extend-include = ["*.py", "*.ipynb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# packages = ["src/ex4_01_03"]
