[project]
name = "ex4-02"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "psiana011", email = "psiana011.endo@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "ortools>=9.10.4067",
    "pulp>=2.8.0",
    "networkx>=3.3",
    "matplotlib>=3.8.4",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "python-lsp-server>=1.11.0",
    "python-lsp-ruff>=2.2.1",
    "jupyterlab-lsp>=5.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ex4_02"]
