[package]
name = "solve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clarabel_wrapper = { version = "0.1.0", path = "../clarabel_wrapper" }
itertools = "0.12.1"
polars = { version = "0.38.3", features = ["strings"] }
